[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/dennis/chain_moves/chain_move_a1_1.gd" type="Script" id=1]
[ext_resource path="res://characters/dennis/chain_moves/chain_move_a1_2.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/dennis/dennis_0.png" type="Texture" id=3]

[node name="dennis_cmr_a1_1" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="dennis_cmr_a1_2" parent="." index="1" instance=ExtResource( 2 )]

[node name="debug" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 3 )
vframes = 7
hframes = 10
frame = 11
_sections_unfolded = [ "Animation", "Offset" ]

[node name="before_hitbox" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="duration_hitbox" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


